--- a/resilient_redis_queue/Cargo.toml
+++ b/resilient_redis_queue/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
-name = "resilient_redis_queue"
+name = "rrq"
 version = "0.1.0"
 edition = "2021"
+default-run = "rrq"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-shared = { path = "../shared" }
-models = { path = "../models" }
 actix-web = "4.0.0"
 actix-rt = "2.10.0"
 serde = { version = "1.0", features = ["derive"] }
