--- a/resilient_redis_queue/Cargo.toml
+++ b/resilient_redis_queue/Cargo.toml
@@ -14,3 +14,6 @@ serde_json = "1.0.68"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0.0", features = ["v4"] }
 thiserror = "1.0.63"
+deadpool-redis = { version = "0.16.0", features = ["serde"] }
+config = "0.14.0"
+dotenvy = "0.15.7"
