--- a/resilient_redis_queue/Cargo.toml
+++ b/resilient_redis_queue/Cargo.toml
@@ -7,6 +7,7 @@ default-run = "rrq"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-cors = "0.7.0"
 actix-web = "4.0.0"
 actix-rt = "2.10.0"
 serde = { version = "1.0", features = ["derive"] }
@@ -18,3 +19,4 @@ deadpool-redis = { version = "0.16.0", features = ["serde"] }
 config = "0.14.0"
 dotenvy = "0.15.7"
 env_logger = "0.11.5"
+futures = "0.3.31"  
