--- a/compose.yaml
+++ b/compose.yaml
@@ -11,12 +11,22 @@ services:
   rrq:
     deploy:
       replicas: 0
-    image: luminainc/rrq:658e7d5
+    image: luminainc/rrq:e5fab21
     ports:
       - "8000:8000"
     environment:
       - REDIS__URL=redis://redis:6379
       - VERSION=1.0.5
       - API_KEY=1234567890
+
+  rrq-analytics:
+    deploy:
+      replicas: 0
+    image: luminainc/rrq-analytics:376844a
+    ports:
+      - "5173:5173"
+    environment:
+      - VITE_API_URL=http://rrq:8000
+
 volumes:
   redis_data:
