--- a/docker/rrq/Dockerfile
+++ b/docker/rrq/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 
 FROM chef AS planner
 
-COPY resilient_redis_queue/ .
+COPY rrq/ .
 RUN cargo chef prepare --recipe-path recipe.json
 
 FROM chef AS builder
@@ -13,7 +13,7 @@ COPY --from=planner /app/recipe.json recipe.json
 # Build dependencies - this is the caching Docker layer!
 RUN cargo chef cook --release --recipe-path recipe.json
 # Build application
-COPY resilient_redis_queue/ .
+COPY rrq/ .
 RUN cargo build --release
 
 FROM debian:bookworm-slim as runtime
